# cryptopal-rust

./: Cargo.toml  README.md
.cargo/: config
e01/: Cargo.toml
e01/src/: main.rs
e02/: Cargo.toml
e02/src/: main.rs
e03/: Cargo.toml  README.md
e03/src/: main.rs
e04/: Cargo.toml  README.md
e04/src/: main.rs
e05/: Cargo.toml
e05/src/: main.rs
e06/: Cargo.toml  README.md
e06/src/: main.rs
e07/: Cargo.toml  README.md
e07/src/: main.rs
e08/: Cargo.toml  README.md
e08/src/: main.rs
e09/: Cargo.toml  README.md
e09/src/: main.rs
e10/: Cargo.toml  README.md
e10/src/: main.rs
e11/: Cargo.toml  README.md
e11/src/: main.rs
e12/: Cargo.toml  README.md
e12/src/: main.rs
src/: aes.rs  detect.rs  encoding.rs  english.rs  lib.rs  pkcs7.rs  single_char.rs
