[package]
name = "cryptopal"
version = "0.1.0"
authors = ["Howard Yeh <hayeah@gmail.com>"]
edition = "2018"

[workspace]

members= ["e01", "e02", "e03", "e04", "e05", "e06", "e07", "e08", "e09", "e10", "e11", "e12"]

[dependencies]
lazy_static = "1.3.0"
failure = "0.1"
base64 = "0.10.1"
hex = "0.3.2"
aesni = "0.6"
generic-array = "0.12.0"
typenum = "1.10.0"
